<resources>
    <string name="app_name">P01- DailyGoals</string>
    <string name="textView1">Read up on materials before class</string>
    <string name="textView2">Did I achieve this goal today?</string>
    <string name="radioBtn1">Yes</string>
    <string name="radioBtn2">No</string>
    <string name="textView3">Arrive on time  so as not to miss important part of the lesson</string>
    <string name="textView4">Did I achieve this goal today?</string>
    <string name="radioBtn3">Yes</string>
    <string name="radioBtn4">No</string>
    <string name="textView5">Attempt the problem myself</string>
    <string name="textView6">Did I achive this goal today?</string>
    <string name="radioBtn5">Yes</string>
    <string name="radioBtn6">No</string>
    <string name="textView7">My personal reflection today</string>
    <string name="btn">Ok</string>
    <string name="button">close</string>
</resources>
